Adding some features

--- a/about.html
+++ b/about.html
@@ -57,6 +57,11 @@
                     <li><i>Email :</i><b> triplets3e@gmail.com </b></li>
                     
                 </ul>
+                <ul class="detail">
+                    <li> <i>Phone : </i><b>+2519539053 </b></li>
+                    <li><i>Email :</i><b> gderse@yahoo.com </b></li>
+                    
+                </ul>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <h4>About Us</h4>
