adding some features on it

--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
                     
                 </ul>
                 <ul class="detail">
+                    <h5><strong><i>Ethiopia ,Addis Ababa Adress</i></strong></h5>
                     <li> <i>Phone : </i><b>+2519539053 </b></li>
                     <li><i>Email :</i><b> gderse@yahoo.com </b></li>
                     
